created new files

--- a/TBayEat_GroupProject/Style/Main.css
+++ b/TBayEat_GroupProject/Style/Main.css
@@ -49,3 +49,28 @@ hr {
 #navDeco {
     align-items: center;
 }
+
+
+.auto-style3 {
+    height: 321px;
+    width: 1033px;
+    margin-left: 183px;
+    margin-bottom: 0px;
+}
+
+.auto-style4 {
+    left: 0px;
+    top: 0px;
+}
+
+.auto-style5 {
+    align-items: center;
+    width: 397px;
+    height: 605px;
+    margin-right: 647px;
+}
+
+.auto-style6 {
+    margin-top: 0;
+}
+        
