Completed Dashboard, add Reports and Request pages

--- a/TBayEat_GroupProject/Style/dashboard.css
+++ b/TBayEat_GroupProject/Style/dashboard.css
@@ -5,3 +5,20 @@
 #sideBarDeco {
     background-color:gainsboro;
 }
+
+.OrderDetails {
+    background-color:white;
+}
+
+.btnDeco {
+    background-color: #1AC073;
+    border: unset;
+}
+.buttonArea {
+    margin-top: 2em;
+    width: 6em;
+   
+}
+
+
+
